platformDesignTemplates/css/platform.css
/* Color Scheme #4484CE #D9D9D9 #F9CF00 #F19F4D */

/***************************TAG SELECTORS**************************/

body {
  text-align: center;
}

h1 {
  text-align: left;
}

h3 {
  width: 100%;
}

a {
  color: white;
}

img {
  width: 30px;
  filter: invert(100%);
}

/***************************CLASS SELECTORS**************************/


/*///////Navigation Controls and Navigation Bar///////*/
.navbar-custom {
  background-color: #4484CE;
}


/*///////////////////Header of Page///////////////////*/
.page-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 75%;
  margin: 35px auto auto;
}

.page-summary {
  text-align: left;
  flex-basis: 700px;
}

.page-summary-text {
  width: 75%;
  margin: auto;
}

.page-summary-text>p {
  width: 50%;
  text-align: left;
}

.help-icon {
  width: 25px;
  height: 25px;
  filter: invert(0);
}


/*///////////////Main Grid with Options///////////////*/
/**************Template Grid**************/
.main-grid {
  width: 80%;
  margin: 0 auto 100px auto;
  display: grid;
  justify-content: space-around;
  align-content: center;
  align-items: center;
  grid-gap: 20px;
  grid-template-areas:
    'people-header people-header people-header people-header'
    'people-1 people-2 people-3 people-4'
    'people-1 people-2 people-3 people-4'
    'people-1 people-2 people-3 people-4'
    'people-1 people-2 people-3 people-4'
    'financial-header financial-header financial-header financial-header'
    'financial-1 financial-2 financial-3 financial-4'
    'financial-1 financial-2 financial-3 financial-4'
    'financial-1 financial-2 financial-3 financial-4'
    'financial-1 financial-2 financial-3 financial-4'
    'time-header time-header time-header time-header'
    'time-1 time-2 time-3 time-4'
    'time-1 time-2 time-3 time-4'
    'time-1 time-2 time-3 time-4'
    'time-1 time-2 time-3 time-4';
}

.people-title {
  grid-area: people-header;
}

.customer-info {
  grid-area: people-1;
}

.client-relations {
  grid-area: people-2;
}

.employee-management {
  grid-area: people-3;
}

.personal-dates {
  grid-area: people-4;
}

.financial-title {
  grid-area: financial-header;
}

.sales-tracker {
  grid-area: financial-1;
}

.sales-forecast {
  grid-area: financial-2;
}

.expense-report {
  grid-area: financial-3;
}

.wage-brackets {
  grid-area: financial-4;
}

.time-title {
  grid-area: time-header;
}

.shift-scheduler {
  grid-area: time-1;
}

.incoming-shipments {
  grid-area: time-2;
}

.meeting-calendar {
  grid-area: time-3;
}

.trip-planner {
  grid-area: time-4;
}

/*******Grid and content Settings********/
.option {
  width: 175px;
  height: 175px;
}

.option:after {
  content: "";
  display: block;
  padding-bottom: 100%;
}

.option>p {
  width: 80%;
  margin: auto;
  font-size: 1rem;
}

.title {
  font-size: 2.5rem;
}

/***********Flipping Box Structure and Effects*************/
.flip-box {
  background-color: transparent;
  perspective: 1000px;
}

.flip-box-inner {
  position: relative;
  width: 100%;
  height: 100%;
  text-align: center;
  transition: transform 0.6s;
  transform-style: preserve-3d;
}

.flip-box:hover .flip-box-inner {
  transform: rotateX(180deg);
}

.flip-box-front, .flip-box-back {
  border-radius: 3%;
  position: absolute;
  width: 100%;
  height: 100%;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
}

.flip-box-front {
  background-color: #F19F4D;
  color: white;
  display: flex;
  margin: auto;
}

.flip-box-front-content {
  width: 90%;
  margin: auto;
}

.flip-box-front-content>img {
  width: 60%;
  filter: invert(100%);
  padding: 5%;
}

.flip-box-back>p {
  width: 90%;
  margin: auto;
  font-size: 0.9rem;
}

/* Style the back side */
.flip-box-back {
  display: flex;
  background-color: #F19F4D;
  color: white;
  transform: rotateX(180deg);
}


/*///////////////////////Footer///////////////////////*/
.footer-flex {
  background-color: #4484CE;
  color: white;
  height: 135px;
  display: flex;
  justify-content: center;
}

.site-purpose {
  width: 55%;
  margin: 10px auto 0;
  font-size: 0.7rem;
}

.icon-credit {
  font-size: 0.4rem;
  margin: 15px auto;
}

.copyright {
  margin: 0 auto;
}


/*////////////////////Media Queries////////////////////*/
@media screen and (max-width: 950px) {
  .page-header {
    width: 60%;
  }

  .page-summary-text {
    width: 60%;
  }

  .page-summary-text>p {
    width: 80%;
  }

  .main-grid {
    justify-content: center;
    grid-gap: 70px;
    grid-template-areas:
      'people-header people-header people-header people-header'
      'people-1 people-1 people-2 people-2'
      'people-1 people-1 people-2 people-2'
      'people-3 people-3 people-4 people-4'
      'people-3 people-3 people-4 people-4'
      'financial-header financial-header financial-header financial-header'
      'financial-1 financial-1 financial-2 financial-2'
      'financial-1 financial-1 financial-2 financial-2'
      'financial-3 financial-3 financial-4 financial-4'
      'financial-3 financial-3 financial-4 financial-4'
      'time-header time-header time-header time-header'
      'time-1 time-1 time-2 time-2'
      'time-1 time-1 time-2 time-2'
      'time-3 time-3 time-4 time-4'
      'time-3 time-3 time-4 time-4';
  }

  .option {
    width: 225px;
    height: 225px;
  }
}

@media screen and (max-width: 750px) {
  .page-header {
    width: 80%;
  }

  .page-summary-text {
    width: 80%;
  }

  .page-summary-text>p {
    width: 100%;
  }

  .main-grid {
    grid-gap: 50px;
  }

  .option {
    width: 200px;
    height: 200px;
  }
}

@media screen and (max-width: 490px) {
  .main-grid {
    grid-template-areas:
      'people-header people-header people-header people-header'
      'people-1 people-1 people-1 people-1'
      'people-2 people-2 people-2 people-2'
      'people-3 people-3 people-3 people-3'
      'people-4 people-4 people-4 people-4'
      'financial-header financial-header financial-header financial-header'
      'financial-1 financial-1 financial-1 financial-1'
      'financial-2 financial-2 financial-2 financial-2'
      'financial-3 financial-3 financial-3 financial-3'
      'financial-4 financial-4 financial-4 financial-4'
      'time-header time-header time-header time-header'
      'time-1 time-1 time-1 time-1'
      'time-2 time-2 time-2 time-2'
      'time-3 time-3 time-3 time-3'
      'time-4 time-4 time-4 time-4';
  }

  .option {
    margin: 10px auto;
  }
}

